--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                                         </span>
                                 </div>
                                 <!-- Event-Description -->
-                                <div class="event-text">First Annual Institute Day</div>
+                                <div class="event-text">Annual College Day</div>
                             </div>
                         </li>
                         <li>
@@ -518,7 +518,7 @@
                                             </span>
                                 </div>
                                 <!-- Event-Description -->
-                                <div class="event-text">Hackathon 2016</div>
+                                <div class="event-text">None</div>
                             </div>
                         </li>
                         <li>
@@ -533,7 +533,7 @@
                                             </span>
                                 </div>
                                 <!-- Event-Description -->
-                                <div class="event-text">Sports Festival Ventura 2016</div>
+                                <div class="event-text">None</div>
                             </div>
                         </li>
                         <li>
@@ -548,7 +548,7 @@
                                             </span>
                                 </div>
                                 <!-- Event-Description -->
-                                <div class="event-text">Republic Day</div>
+                                <div class="event-text">None</div>
                             </div>
                         </li>
                         <li>
@@ -563,7 +563,7 @@
                                             </span>
                                 </div>
                                 <!-- Event-Description -->
-                                <div class="event-text">Nabhyaan: A festival of kite</div>
+                                <div class="event-text">None</div>
                             </div>
                         </li>
 
