--- a/index.html
+++ b/index.html
@@ -447,8 +447,7 @@
 
             <!-- Edit this section for important announcements.-->
             <div class="alert alert-warning text-center">
-                Institute invites applications for <a class="alert-link" href="http://pgadmissions.iiitvadodara.ac.in/">MTech
-                and PhD programs - Academic Year 2016-17</a>
+                Notice to candidates who wish to apply for the <a class="alert-link" href="https://docs.google.com/forms/d/e/1FAIpQLSeVjUHHK9cG8K7JgCsnb3bAFtUmUEf4dgFD6Ak9MBxtp4IyYA/closedform">GCE Advanced Level academic year 2021/2023 based on the results of the GCE (O/L) Examination 2020.</a>
             </div>
 
             <!-- Announcements -->
@@ -457,8 +456,8 @@
                     <div class="widgets-title"><h2>Announcements</h2></div>
                     <ul id="announcement-list">
                         <li>
-                            For admissions to <b>M.Tech. and Ph.D. programs</b> visit:<br><a
-                                href="http://pgadmissions.iiitvadodara.ac.in" target="_blank"> PG-Admission-Portal.</a>
+                            For admissions  <b>who wish to apply for the</b> visit:<br><a
+                                href="http://pgadmissions.iiitvadodara.ac.in" target="_blank"> GCE Advanced Level academic year 2021/2023</a>
                         </li>
                         <li>
                             For queries related to <b>B.Tech. programs </b>contact us at: &nbsp; &nbsp; <span
