--- a/index.html
+++ b/index.html
@@ -460,15 +460,15 @@
                                 href="http://pgadmissions.iiitvadodara.ac.in" target="_blank"> GCE Advanced Level academic year 2021/2023</a>
                         </li>
                         <li>
-                            For queries related to <b>B.Tech. programs </b>contact us at: &nbsp; &nbsp; <span
+                            For queries related to <b>any of programs </b>contact us at: &nbsp; &nbsp; <span
                                 style="font-size: 12px; font-weight: bold;color:Black"><a
-                                href="mailto:admissions@iiitvadodara.ac.in">admissions@iiitvadodara.ac.in</a></span>
+                                href="mailto:college@delasalle.lk">college@delasalle.lk</a></span>
                         </li>
                         <li>
-                            Government of India Schemes for Students' Welfare <a
-                                href="https://www.vidyalakshmi.co.in/Students/indexPopup" target="_blank">www.vidyalakshmi.co.in </a><a
-                                href="https://www.scholarships.gov.in/main.do" target="_blank">
-                            www.scholarships.gov.in </a>
+                            Covid 19 Vaccination programme <a
+                                href="www.delasalle.lk" target="_blank">www.delasalle.lk </a><a
+                                href="announcements.html" target="_blank">
+                            Announcements </a>
                         </li>
                     </ul>
                     <div id="announcement-list-pagination">
