--- a/index.html
+++ b/index.html
@@ -657,11 +657,11 @@
                 </div>
                 <div class="contact-name">
                     <h5>Address</h5>
-                    <p>Warnwe Park Streetperrine, <br>FL 33157 New York City</p>
+                    <p>130, De La Salle Street, <br>Mutwal 01500 Colombo, Sri Lanka</p>
                 </div>
                 <div class="contact-name">
                     <h5>Phone</h5>
-                    <p>+01 123 654 8096</p>
+                    <p>+94 112 522 125</p>
                 </div>
                 <div class="social-share nav">
                     <a class="dribbble" href="#">
@@ -691,15 +691,15 @@
                 <!--</div>-->
                 <!--<div class="col-sm-4 links">-->
                  <center>   <p>
-                        <a href="../#news">News</a>
+                        <a href="blog.html">News</a>
                         <i class="seperator"></i>
-                        <a href="../#announcements">Announcement</a>
+                        <a href="announcements.html">Announcement</a>
                         <i class="seperator"></i>
-                        <a href="../#events">Events</a>
+                        <a href="view-events.html">Events</a>
                     	<i class="seperator"></i>
                         <a href="../#">Home</a>
                         <i class="seperator"></i>
-                        <a href="http://iiitvadodara.ac.in/rti.php">RTI</a>
+                        <a href="obu.html">OBU</a>
                         <i class="seperator"></i>
                         <a href="http://iiitvadodara.ac.in/pdf/MOU.pdf" target="_blank">MOU</a>
                     	<i class="seperator"></i>
