--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
                             <li>
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">About us <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="about.html">About</a></li>
