--- a/Roman-Catholic-Church-in-Sri Lanka.html
+++ b/Roman-Catholic-Church-in-Sri Lanka.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="header-links">
                     <a href="#" data-toggle="popover" title="Address"
-                       data-content="c/o Block No.9 (IC Department), Government Engineering College, Sector-28, Gandhinagar, Gujarat - 382028"
+                       data-content="c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka"
                        data-placement="bottom"><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a>
                     <a href="#" data-toggle="popover" title="Phone No." data-content="+91-79-29750281"
                        data-placement="bottom"><i class="fa fa-phone fa-lg" aria-hidden="true"></i></a>
