--- a/College-Directors.html
+++ b/College-Directors.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="header-links">
                     <a href="#" data-toggle="popover" title="Address"
-                       data-content="c/o Block No.9 (IC Department), Government Engineering College, Sector-28, Gandhinagar, Gujarat - 382028"
+                       data-content="c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka"
                        data-placement="bottom"><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a>
                     <a href="#" data-toggle="popover" title="Phone No." data-content="+91-79-29750281"
                        data-placement="bottom"><i class="fa fa-phone fa-lg" aria-hidden="true"></i></a>
@@ -154,8 +154,7 @@
             <span class="logo"><img src="img/IIITV_Logo_1x1_small.png" alt=""></span>
             <div class="row">
                 <div class="col-sm-4 address">
-                    <strong>Address : </strong>c/o Block No.9 (IC Department), Government Engineering College,
-                    Sector-28, Gandhinagar, Gujarat - 382028
+                    <strong>Address : </strong>c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka
                 </div>
                 <div class="col-sm-4 links">
                     <div>
