--- a/gallery.html
+++ b/gallery.html
@@ -288,6 +288,15 @@
                                                     </div>
                         --> <img src="img/gallery/13.png" alt="">
 
+                        <!--Image 14-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/14.JPG">
+                        <!--                            <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>Caption</span>
+                                                        </div>
+                                                    </div>
+                        --> <img src="img/gallery/14.JPG" alt="">
+
                 </div>
             </div>
         </div>
