--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -160,6 +160,8 @@
                         of good buildings; one section of it has edged towards the cliff, overlooking the
                         Indian Ocean.</p>
 
+                        <center>  <img class="responsive-img" src="img/College-in-1906.jpg" style="width: 250px; height:250px;"> </center>
+
                     <p>The De La Salle Brothers who started this school, and who still have a hand in its
                         management, strive to make their contribution to build up the just society through
                         education of youth. Their guiding principle is that men must learn to live with love
