--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -155,14 +155,15 @@
                     object of this School is to give the boys of the Mutwal mission an opportunity to
                     receive an elementary English Education. It is the first “English School” to be set
                     up in this part of Colombo North.</p>
-                    </br>
+                
                     <p>Starting from cadjan sheds and horse stable structures, the school now has a set
                         of good buildings; one section of it has edged towards the cliff, overlooking the
                         Indian Ocean.</p>
 
+                    </br>
                         <center>  <img class="responsive-img" src="img/College-in-1906.jpg" style="width: auto; height:auto;"> </center>
 
-                    </br>
+                        </br
 
                     <p>The De La Salle Brothers who started this school, and who still have a hand in its
                         management, strive to make their contribution to build up the just society through
@@ -185,6 +186,10 @@
                         formation was given the pride of place so that our students would become
                         responsible, trustworthy and productive citizens of the country.</p>
 
+                    </br>
+                    <center>  <img class="responsive-img" src="img/Crests.jpg" style="width: auto; height:auto;"> </center>
+
+                    </br
                     <p>De La Salle College’s persevering efforts to maintain the best traditions of
                         Catholic education in the midst of many local difficulties and to bring the benefits
                         of a Sound Catholic education to the sons of the struggling families of the
