--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -161,7 +161,7 @@
                         Indian Ocean.</p>
 
                     </br>
-                        <center>  <img class="responsive-img" src="img/College-in-1906.jpg" style="width: auto; height:auto;"> </center>
+                        <center>  <img class="responsive-img" src="img/College-in-1906.jpg" style="width: 100px; height:auto;"> </center>
 
                         </br
 
