--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -140,11 +140,13 @@
                 </div>
             </nav>
         </header>
+        <section>
+        <div class="progress-bar" id="myBar"></div>
+  </div>
+</section>
         <!-- /header -->
         <!-- Content wrapper -->
         <div class="contents-wrapper">
-            <div class="progress-bar" id="myBar"></div>
-  </div>
             <!-- Contents starts here -->
             <div class="content">
                 <h1>History and Location / About our College 
