--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -19,7 +19,8 @@
 }
     </style>
 </head>
-<div class="progress-bar" id="myBar"></div>
+
+<body><div class="progress-bar" id="myBar"></div></body>
 
 <body>
     <!-- Start Your Body Code From here -->
