--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -19,8 +19,9 @@
 }
     </style>
 </head>
-
-<body><div class="progress-bar" id="myBar"></div></body>
+<header>
+    <body><div class="progress-bar" id="myBar"></div></body>
+</header>
 
 <body>
     <!-- Start Your Body Code From here -->
