--- a/blog.html
+++ b/blog.html
@@ -151,7 +151,7 @@
                                                 <label>OCT</label>
                                             </div>
                                             <a href="#">
-                                                <img src="blogs/src/welcoming rev bro jayakanthan.jpg" title="" alt="">
+                                                <img src="Blogs/welcoming rev bro jayakanthan.jpg" title="" alt="">
                                             </a>
                                         </div>
                                         <div class="blog-info">
