--- a/announcements.html
+++ b/announcements.html
@@ -164,14 +164,14 @@
                                             <p>Dear Students and Parents,</p>
                                             <p>Following is the link for the application form for A/L candidates 2023:</p><br>
                                             <p>
-                                                Link: <a href="https://docs.google.com/forms/d/e/1FAIpQLSclrq9qGnoPAZw1RNV7Fna11ErByhS9IrBNAusRTAAHfuxxhw/viewform?embedded=true" target="_blank"  style="text-decoration:underline;">Application form for A/L candidates 2023</a>
+                                                Link: <a href="" target="_blank"  style="text-decoration:underline;">Application form for A/L candidates 2023</a>
                                             </p>
                                             <br>
-                                            <p>You are requested to submit the application form on or before 04th October 2021. There will be a special session conducted on 28th September 2021 at 08.30 pm via Zoom  by the Sectional heads of the AL section for you to help how to select your stream and the subjects. Your participation is mandatory. </p>
+                                            <p> </p>
                                             <p style="margin-top:10px;">Thank you and May God bless you.</p>
-                                            <p style="margin-top:10px;">Rev. Fr. Dilip Charles</p>
-                                            <p>Priest in Charge</p>
-                                            <p>A/L section</p>
+                                            <p style="margin-top:10px;"></p>
+                                            <p></p>
+                                            <p></p>
                                         </div>
                                     </li>
                                     <!--li>
