--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">About us <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
+                                    <li><a href="index.html">Home</a></li>
                                     <li><a href="about.html">About</a></li>
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
@@ -192,7 +193,6 @@
                                     <li><a href="invited_talks.html">Invited Talks</a></li>
                                 </ul>
                             </li>
-                            <li><a href="career.html">Career</a></li>
                             <li><a href="gallery.html">Photo Gallery</a></li>
                         </ul>
                     </div>
