--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             <li>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">About us <b
                                         class="caret"></b></a>
-                                        <li><a href="index.html">Home</a></li>
+                                        <li><a href="index.html">Home</a></li></ul>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="about.html">About</a></li>
                                     <li class="dropdown-submenu">
