--- a/index.html
+++ b/index.html
@@ -111,8 +111,6 @@
                             <li>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">About us <b
                                         class="caret"></b></a>
-                                        <li><a href="index.html">Home</a></li>
-                        </ul>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="about.html">About</a></li>
                                     <li class="dropdown-submenu">
@@ -194,6 +192,7 @@
                                     <li><a href="invited_talks.html">Invited Talks</a></li>
                                 </ul>
                             </li>
+                            <li><a href="career.html">Career</a></li>
                             <li><a href="gallery.html">Photo Gallery</a></li>
                         </ul>
                     </div>
