--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
+                                <li><a href="index.html">Home</a></li>
                             <li>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">About us <b
                                         class="caret"></b></a>
