--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admission <b
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">ADMINISTRATION <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li><a href="btech_admission.html">B.Tech</a></li>
-                                    <li><a href="mtech_admission.html">M.Tech</a></li>
-                                    <li><a href="phd_admission.html">Ph.D</a></li>
+                                    <li><a href="directors_message.html">Principal</a></li>
+                                    <li><a href="#">Deputy Principal</a></li>
+                                    <li><a href="#">Academic Staff</a></li>
                                 </ul>
                             </li>
                             <li>
