--- a/index.html
+++ b/index.html
@@ -148,20 +148,26 @@
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li class="dropdown-submenu">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">B.Tech</a>
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Grade 5 Scholarships</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="btech_cse.html">CSE</a></li>
-                                            <li><a href="btech_it.html">IT</a></li>
+                                            <li><a href="#">admissions</a></li>
+                                            <!--li><a href="#">IT</a></li-->
                                         </ul>
                                     </li>
                                     <li class="dropdown-submenu">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">M.Tech</a>
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">GCE O/L</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="mtech_cse.html">CSE</a></li>
+                                            <li><a href="#">admissions</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="phd.html">Ph.D</a></li>
-                                    <li><a href="pdf/academic_calendar_autumn_2015_16.pdf">Academic Calender</a></li>
+                                        <li class="dropdown-submenu">
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">GCE A/L</a>
+                                            <ul class="dropdown-menu">
+                                                <li><a href="#">admissions</a></li>
+                                            </ul>
+                                    </li>
+                                    <!--li><a href="#">More</a></li-->
+                                    <li><a href="#">Academic Calender</a></li>
 
                                 </ul>
                             </li>
