--- a/index.html
+++ b/index.html
@@ -181,11 +181,15 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">People <b class="caret"></b></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">OBU <b class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li><a href="faculty.html">Faculty</a></li>
-                                    <li><a href="visiting_faculty.html">Visiting Faculty</a></li>
-                                    <li><a href="staff.html">Staff</a></li>
+                                    <li><a href="obu.html">Overviews</a></li>
+                                    <li><a href="OBU-Constitution.html">OBU Construction</a></li>
+                                    <li><a href="staff.html">Coming soon</a></li>
+                                    <li><a href="staff.html">Coming soon</a></li>
+                                    <li><a href="staff.html">Coming soon</a></li>
+                                    <li><a href="staff.html">Coming soon</a></li>
+                                    <li><a href="staff.html">Coming soon</a></li>
                                 </ul>
                             </li>
                             <li>
