--- a/index.html
+++ b/index.html
@@ -185,22 +185,23 @@
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="obu.html">Overviews</a></li>
                                     <li><a href="OBU-Constitution.html">OBU Construction</a></li>
-                                    <li><a href="staff.html">Coming soon</a></li>
-                                    <li><a href="staff.html">Coming soon</a></li>
-                                    <li><a href="staff.html">Coming soon</a></li>
-                                    <li><a href="staff.html">Coming soon</a></li>
-                                    <li><a href="staff.html">Coming soon</a></li>
+                                    <li><a href="#">Coming soon</a></li>
+                                    <li><a href="#">Coming soon</a></li>
+                                    <li><a href="#">Coming soon</a></li>
+                                    <li><a href="#">Coming soon</a></li>
+                                    <li><a href="#">Coming soon</a></li>
                                 </ul>
                             </li>
                             <li>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li><a href="faq.html">FAQs</a></li>
-                                    <li><a href="student_corner.html">Student's Corner</a></li>
-                                    <li><a href="http://moodle.iiitv.ac.in" target="_blank">Moodle</a></li>
-                                    <li><a href="library.html">Library</a></li>
-                                    <li><a href="invited_talks.html">Invited Talks</a></li>
+                                    <li><a href="https://en.wikipedia.org/wiki/De_La_Salle_College,_Colombo">Wikipedia</a></li>
+                                    <li><a href="#">Student's Corner</a></li>
+                                    <li><a href="#" target="_blank">Coming soon</a></li>
+                                    <li><a href="#">Coming soon</a></li>
+                                    <li><a href="">Coming soon</a></li>
+                                    <li><a href="#">Coming soon</a></li>
                                 </ul>
                             </li>
                             <li><a href="gallery.html">Photo Gallery</a></li>
