--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">OBU <b class="caret"></b></a>
+                                <a href="obu.html" class="dropdown-toggle" data-toggle="dropdown">OBU <b class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li><a href="obu.html">Overviews</a></li>
+                                    <li><a href="obu.html">Overview</a></li>
                                     <li><a href="OBU-Constitution.html">OBU Construction</a></li>
                                     <li><a href="#">Coming soon</a></li>
                                     <li><a href="#">Coming soon</a></li>
