--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <script src="https://use.fontawesome.com/434d359724.js"></script>
-<script src="http://iiitvadodara.ac.in/js/main.js"></script>
+<script src="js/main.js"></script>
 <script>
 $(document).on('click', function (e) {
     var
@@ -775,31 +775,24 @@ $(document).on('click', function (e) {
 **Contributors for this Website**
 *********************************
 
-The website has been designed and developed from scratch by the Students of IIIT Vadodara
+The website has been designed and developed from scratch by the Students of De La Salle College
 
 --Designed by--
-Mofid Ansari (ansarimofid@gmail.com)
-Pratyush Singh (singh.pratyush96@gmail.com)
+Kasun Chanuka Fernando (chanukaf7@gmail.com)
 
 --Core Developers--
-Mofid Ansari (ansarimofid@gmail.com)
-Pratyush Singh (singh.pratyush96@gmail.com)
-Saurabh Jain (saurabhjn76@gmail.com)
+Kasun Chanuka Fernando (chanukaf7@gmail.com)
 
---Supporting Developers--
-RajuKoushik (g.rajukoushik@gmail.com)
-Kamal Awasthi (kamalawasthi97@gmail.com)
-Avi Aryan (avi.aryan123@gmail.com)
+--Web Graphics Mockup & Animations--
+Kasun Chanuka Fernando (chanukaf7@gmail.com)
 
---Contribution through reporting issues--
-Harish Krupo (harishkrupo@gmail.com)
-Shalinee Singh (shalinee43@gmail.com)
-Mayank Maurya (mayankm522@gmail.com)
-Navneet Nandan (navneet.nandan8@gmail.com)
-Prem Chand Saini (premchandsaini779@gmail.com)
-Unni Rajendra (unni332265@gmail.com)
-Ravi Kishan Jha (ravikishan77@gmail.com)
-Ankit Kumar (ankit.kumar071460@yahoo.com)
+
+--Special thanks for Support--
+Thisum Radith
+Stackoverflow Community
+Github Community
+
+
 
 -->
 </body>
