--- a/index.html
+++ b/index.html
@@ -720,8 +720,8 @@
                         <i class="seperator"></i>
                         <a href="http://iiitvadodara.ac.in/faculty.php">Faculty</a>
                     	&nbsp;&nbsp;&nbsp;
-               <!-- </div>-->
-               <!-- <div class="col-sm-4 footer-social">-->
+               </div>
+               <div class="col-sm-4 footer-social"
                     <a href="https://www.facebook.com/DeLaSalleCollegeColombo/"><i class="fa fa-facebook" aria-hidden="true" title="Official Facebook Page"></i></a>
                     <!--<a href="https://github.com/kasuncfdo"><i class="fa fa-github" aria-hidden="true"
                                                           title="Github Group"></i></a>-->
@@ -729,7 +729,7 @@
                     <a href="https://www.facebook.com/DeLaSalleCollegeColombo/" title=""><i class="fa fa-twitter" aria-hidden="true"
                                              title="Official Twitter Account"></i></a>
 				</p> </center>
-                <!--</div>-->
+                </div>
             </div>
 			<div>  
 			<p style="text-align: justify;"><font size="1.5" color="#383736">Disclaimer:<br/> The contents in the website are for information purpose only. DLS College ICT Unite regularly monitors and updates the information on this website. We attempt to ensure that the information on this website is correct, however, we do not warrant its completeness or accuracy. No rights can be derived from the information contained in the DLS College Official website. The website may contain links to websites of third party organizations.We cannot be held responsible for any consequences arising from the use of information obtained from these websites.</font></p>
