--- a/admissions.html
+++ b/admissions.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>IIIT-V | Admissions</title>
+    <title>De La Salle College Colombo 15 | Admissions</title>
     <!--Style Starts-->
     <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
@@ -26,8 +26,8 @@
                         </div>
                         <div class="name">
                             <a href="index.html" title="">
-                                <h5>Indian Institute of Information Technology</h5>
-                                <h5 class="primary-color">Vadodara</h5>
+                                <h5>De La Salle College</h5>
+                                <h5 class="primary-color">Mutwal</h5>
                             </a>
                         </div>
                     </div>
@@ -147,18 +147,18 @@
         <br/><br/>
         <div class="row">
             <div class="col-sm-4 col-md-4 col-lg-4">
-                <a href="btech_admission.html">
-                    B.Tech. Admissions
+                <a href="#">
+                    Grade 05 Scholarship. Admissions
                 </a>
             </div>
             <div class="col-sm-4 col-md-4 col-lg-4">
-                <a href="mtech_admission.html">
-                    M.Tech. Admissions
+                <a href="#">
+                    GCE O/L. Admissions
                 </a>
             </div>
             <div class="col-sm-4 col-md-4 col-lg-4">
-                <a href="phd_admission.html">
-                    PhD Admissions
+                <a href="#">
+                    GCE A/L. Admissions
                 </a>
             </div>
         </div>
