--- a/index.html
+++ b/index.html
@@ -712,13 +712,13 @@
                         <i class="seperator"></i>
                         <a href="obu.html">OBU</a>
                         <i class="seperator"></i>
-                        <a href="http://iiitvadodara.ac.in/pdf/MOU.pdf" target="_blank">MOU</a>
+                        <a href="#" target="_blank">MOU</a>
                     	<i class="seperator"></i>
-                        <a href="../admissions.php">Admission</a>
+                        <a href="admissions.html">Admission</a>
                         <i class="seperator"></i>
-                        <a href="http://iiitvadodara.ac.in/student_corner.php">Student</a>
+                        <a href="#">Student</a>
                         <i class="seperator"></i>
-                        <a href="http://iiitvadodara.ac.in/faculty.php">Faculty</a>
+                        <a href="#">Faculty</a>
                     	&nbsp;&nbsp;&nbsp;
                <!-- </div>-->
                <!-- <div class="col-sm-4 footer-social">-->
