--- a/index.html
+++ b/index.html
@@ -126,20 +126,21 @@
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">HISTORY AND TRADITIONS</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="Identity/da-iict.html">History Of College</a></li>
-                                            <li><a href="Chronology College History.html">Chronology College History</a></li>
+                                            <li><a href="History-and-Location.html">History Of College</a></li>
+                                            <li><a href="The-Coat-of-Arms.html">The-Coat-of-Arms</a></li>
+                                            <li><a href="#">Chronology College History</a></li>
                                             <li><a href="College-Directors.html">Past Recters</a></li>
-                                            <li><a href="Identity/tcs.html">TCS</a></li>
+                                            <!--li><a href="Identity/tcs.html">TCS</a></li-->
                                         </ul>
                                     </li>
 
                                     <li><a href="directors_message.html">Director's Message</a></li>
-                                    <li><a href="bog.html">Board of Governors</a></li>
+                                    <li><a href="College-Directors.html">College Directors</a></li>
                                     <li><a href="Chronology College History.html">Chronology College History</a></li>
-                                    <li><a href="academic_council.html">Academic Council</a></li>
-                                    <li><a href="finance_committee.html">Finance Committee</a></li>
-                                    <li><a href="rti.html">RTI</a></li>
-                                    <li><a href="pdf/MOU.pdf">MOU</a></li>
+                                    <li><a href="Academics.php.html">Academic Council</a></li>
+                                    <li><a href="Academic-Progress.html">Academic Progress</a></li>
+                                    <li><a href="Activities-in-Development-Stage.html">Activities in Development Stage</a></li>
+                                    <li><a href="Bridge-between-the-College-and-the-Old-Boys.html">Bridge between the College and the Old-Boys</a></li>
                                     
                                 </ul>
                             </li>
