--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <style>
-.nav navbar-nav li a:before{
+.navbar-nav li a:before{
   content: '';
   position: absolute;
   bottom: 0;
@@ -26,7 +26,7 @@
 }
 
 
-    .nav navbar-nav li.center a:before{
+    .navbar-nav li.center a:before{
   left: 50%;
   transform: translateX(-50%);
     }
