--- a/about.html
+++ b/about.html
@@ -13,7 +13,27 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <style>
-.navbar-nav li a:before{
+.nav-links{
+  display: flex;
+  align-items: center;
+  background: #fff;
+  padding: 20px 15px;
+  border-radius: 12px;
+  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+}
+.nav-links li{
+  list-style: none;
+  margin: 0 12px;
+}
+.nav-links li a{
+  position: relative;
+  color: #333;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 6px 0;
+  text-decoration: none;
+}
+.nav-links li a:before{
   content: '';
   position: absolute;
   bottom: 0;
@@ -24,12 +44,13 @@
   border-radius: 12px;
   transition: all 0.4s ease;
 }
-
-
-    .navbar-nav li.center a:before{
+.nav-links li a:hover:before{
+  width: 100%;
+}
+.nav-links li.center a:before{
   left: 50%;
   transform: translateX(-50%);
-    }
+}
 </style>
 
 <body>
