--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <style>
-.nav-links{
+.navbar-nav{
   display: flex;
   align-items: center;
   background: #fff;
@@ -21,11 +21,11 @@
   border-radius: 12px;
   box-shadow: 0 5px 10px rgba(0,0,0,0.2);
 }
-.nav-links li{
+.navbar-nav li{
   list-style: none;
   margin: 0 12px;
 }
-.nav-links li a{
+.navbar-nav li a{
   position: relative;
   color: #333;
   font-size: 20px;
@@ -33,7 +33,7 @@
   padding: 6px 0;
   text-decoration: none;
 }
-.nav-links li a:before{
+.navbar-nav li a:before{
   content: '';
   position: absolute;
   bottom: 0;
@@ -44,10 +44,10 @@
   border-radius: 12px;
   transition: all 0.4s ease;
 }
-.nav-links li a:hover:before{
+.navbar-nav li a:hover:before{
   width: 100%;
 }
-.nav-links li.center a:before{
+.navbar-nav li.center a:before{
   left: 50%;
   transform: translateX(-50%);
 }
