--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
   left: 0;
   height: 3px;
   width: 0%;
-  background: #34efdf;
+  background: #fd0808;
   border-radius: 12px;
   transition: all 0.4s ease;
 }
