--- a/about.html
+++ b/about.html
@@ -28,12 +28,12 @@
   left: 0;
   height: 3px;
   width: 0%;
-  background: #fd0808;
+  background: #f31111;
   border-radius: 12px;
   transition: all 0.4s ease;
 }
 .navbar-nav li a:hover:before{
-
+  width: 100%;
 }
 .navbar-nav li.center a:before{
   left: 50%;
