--- a/Under_Construction.html
+++ b/Under_Construction.html
@@ -166,7 +166,7 @@ h2 {
 }
 
 .shadow1 { 
-  box-shadow: 0 5px 10px rgba(154,160,185,.05), 0 15px 40px rgba(166,173,201,.2);
+  box-shadow: 0 5px 10px rgba(154, 160, 185, 0.219), 0 15px 40px rgba(166, 173, 201, 0.274);
 }
 
 .shadow2 { 
