--- a/Under_Construction.html
+++ b/Under_Construction.html
@@ -187,7 +187,7 @@ h2 {
         </div>
     </div>
     </section>
-    <style>
+  <section>  <style>
         @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
 *,
@@ -386,6 +386,7 @@ h2 {
     </li>
   </ul>
 </div>
+</section>
                 
     <!-- Footer -->
     <footer>
