--- a/index.html
+++ b/index.html
@@ -152,24 +152,24 @@
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Grade 5 Scholarships</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="#">admissions</a></li>
+                                            <li><a href="Under_Construction.html">admissions</a></li>
                                             <!--li><a href="#">IT</a></li-->
                                         </ul>
                                     </li>
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">GCE O/L</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="#">admissions</a></li>
+                                            <li><a href="Under_Construction.html">admissions</a></li>
                                         </ul>
                                     </li>
                                         <li class="dropdown-submenu">
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">GCE A/L</a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="#">admissions</a></li>
+                                                <li><a href="Under_Construction.html">admissions</a></li>
                                             </ul>
                                     </li>
                                     <!--li><a href="#">More</a></li-->
-                                    <li><a href="#">Academic Calender</a></li>
+                                    <li><a href="Under_Construction.html">Academic Calender</a></li>
 
                                 </ul>
                             </li>
@@ -178,20 +178,20 @@
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="directors_message.html">Principal</a></li>
-                                    <li><a href="#">Deputy Principal</a></li>
-                                    <li><a href="#">Academic Staff</a></li>
+                                    <li><a href="Under_Construction.html">Deputy Principal</a></li>
+                                    <li><a href="Under_Construction.html">Academic Staff</a></li>
                                 </ul>
                             </li>
                             <li>
                                 <a href="obu.html" class="dropdown-toggle" data-toggle="dropdown">OBU <b class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="obu.html">Overview</a></li>
-                                    <li><a href="OBU-Constitution.html">OBU Construction</a></li>
-                                    <li><a href="#">Coming soon</a></li>
-                                    <li><a href="#">Coming soon</a></li>
-                                    <li><a href="#">Coming soon</a></li>
-                                    <li><a href="#">Coming soon</a></li>
-                                    <li><a href="#">Coming soon</a></li>
+                                    <li><a href="OBU-Constitution.html">OBU Constitution</a></li>
+                                    <li><a href="Under_Construction.html">Coming soon</a></li>
+                                    <li><a href="Under_Construction.html">Coming soon</a></li>
+                                    <li><a href="Under_Construction.html">Coming soon</a></li>
+                                    <li><a href="Under_Construction.html">Coming soon</a></li>
+                                    <li><a href="Under_Construction.html">Coming soon</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -199,11 +199,11 @@
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="https://en.wikipedia.org/wiki/De_La_Salle_College,_Colombo">Wikipedia</a></li>
-                                    <li><a href="#">Student's Corner</a></li>
-                                    <li><a href="#" target="_blank">Coming soon</a></li>
-                                    <li><a href="#">Coming soon</a></li>
-                                    <li><a href="">Coming soon</a></li>
-                                    <li><a href="#">Coming soon</a></li>
+                                    <li><a href="Under_Construction.html">Student's Corner</a></li>
+                                    <li><a href="Under_Construction.html" target="_blank">Coming soon</a></li>
+                                    <li><a href="Under_Construction.html">Coming soon</a></li>
+                                    <li><a href="Under_Construction.html">Coming soon</a></li>
+                                    <li><a href="Under_Construction.html">Coming soon</a></li>
                                 </ul>
                             </li>
                             <li><a href="gallery.html">Photo Gallery</a></li>
