--- a/Academic-Progress.html
+++ b/Academic-Progress.html
@@ -61,7 +61,7 @@
                             <li class="active">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">About us <b class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li class="active"><a href="about.html">About</a></li>
+                                    <li><a href="about.html">About</a></li>
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
                                         <ul class="dropdown-menu">
@@ -86,7 +86,7 @@
                                     <li><a href="College-Directors.html">College Directors</a></li>
                                     <li><a href="Chronology College History.html">Chronology College History</a></li>
                                     <li><a href="Academics.php.html">Academic Council</a></li>
-                                    <li><a href="Academic-Progress.html">Academic Progress</a></li>
+                                    <li class="active"><a href="Academic-Progress.html">Academic Progress</a></li>
                                     <li><a href="Activities-in-Development-Stage.html">Activities in Development Stage</a></li>
                                     <li><a href="The-Coat-of-Arms.html">The Coat of Arms o  the  De La Salle  Brothers</a></li>
                                     <li><a href="Bridge-between-the-College-and-the-Old-Boys.html">Bridge between the College and the Old-Boys</a></li>
