--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -82,9 +82,10 @@
                                             </ul>
                                         </li>
                                         <li class="dropdown-submenu">
+                                            <li class="dropdown-submenu active"></li>
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">HISTORY AND TRADITIONS</a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="History-and-Location.html">History Of College</a></li>
+                                                <li class="active"><a href="History-and-Location.html">History Of College</a></li>
                                                 <li><a href="The-Coat-of-Arms.html">The-Coat-of-Arms</a></li>
                                                 <li><a href="#">Chronology College History</a></li>
                                                 <li><a href="College-Directors.html">Past Recters</a></li>
@@ -96,7 +97,7 @@
                                         <li><a href="College-Directors.html">College Directors</a></li>
                                         <li><a href="Chronology College History.html">Chronology College History</a></li>
                                         <li><a href="Academics.php.html">Academic Council</a></li>
-                                        <li class="active"><a href="Academic-Progress.html">Academic Progress</a></li>
+                                        <li><a href="Academic-Progress.html">Academic Progress</a></li>
                                         <li><a href="Activities-in-Development-Stage.html">Activities in Development Stage</a></li>
                                         <li><a href="The-Coat-of-Arms.html">The Coat of Arms o  the  De La Salle  Brothers</a></li>
                                         <li><a href="Bridge-between-the-College-and-the-Old-Boys.html">Bridge between the College and the Old-Boys</a></li>
