--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -82,7 +82,7 @@
                                             </ul>
                                         </li>
                                         <li class="dropdown-submenu">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">HISTORY AND TRADITIONS</a>
+                                            <a href="#" class="dropdown-toggle" class="active" data-toggle="dropdown">HISTORY AND TRADITIONS</a>
                                             <ul class="dropdown-menu">
                                                 <li class="active"><a href="History-and-Location.html">History Of College</a></li>
                                                 <li><a href="The-Coat-of-Arms.html">The-Coat-of-Arms</a></li>
